--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -154,10 +154,11 @@ source and destination of a communication, data on the location of the device
 generated in the context of providing electronic communications services, and the
 date, time, duration and the type of communication;
 
-(d) ‘publicly available directory’ means a directory of end-users of electronic
-communications services, whether in printed or electronic form, which is published
+(d) ‘publicly available directory’ means a directory of end-users of number-based
+interpersonal communications services, whether in printed or electronic form, which is published
 or made available to the public or to a section of the public, including by means of a
-directory enquiry service;
+directory enquiry service and the main function of which is to enable to identify
+such end-users;
 
 (e) ‘electronic message’ means any message containing information such as text,
 voice, video, sound or image sent over an electronic communications network which
@@ -311,8 +312,7 @@ Storage and erasure of electronic communications data
 
 ```
 Article 8
-Protection of information stored in terminal equipment of end-users and [related to or processed
-by or emitted by] such equipment
+Protection of end-users' terminal equipment information
 ```
 1. The use of processing and storage capabilities of terminal equipment and the
     collection of information from end-users’ terminal equipment, including about its
@@ -339,8 +339,6 @@ provided that conditions laid down in Article 28 of Regulation (EU) 2016/679 are
     (ii) the end-user is informed in advance each time an update is being installed, and
     (iii) the end-user is given the possibility to postpone or turn off the automatic 
     installation of these updates; or 
-(f) it is necessary to locate, at the time of the incident, a caller of an emergency call from the
-    terminal by organisations dealing with emergency communications. 
     
 2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
     to another device and, or to network equipment shall be prohibited, except on the
@@ -383,14 +381,14 @@ Information and options for privacy settings to be provided
     prevent any other parties than the end-user from storing information on the terminal equipment of an end-
     user or processing information already stored on that equipment.
 2. Upon installation or first usage, the software  referred to in paragraph 1 shall inform the end-user about the privacy settings
-    options and, to continue with the installation or usage, require the end-user to consent to a
-    setting.
+    options and shall remind the end-users of the
+    availability of privacy settings with periodic intervals.
 2a. The software referred to in paragraph 1 shall provide in a clear manner easy ways
-    for end-users to change the privacy setting consented to under paragraph 2 at any
+    for end-users to change the privacy setting at any
     time during the use.
-3. In the case of software which has already been installed on [25 May 2018], the
+3. In the case of software which has already been installed on [the date of entry into application], the
     requirements under paragraphs 1 and 2 shall be complied with at the time of the first
-    update of the software, but no later than [25 August 2018].
+    update of the software, but no later than [3 month after the date of entry into applicationn].
 
 ```
 Article 11
@@ -501,21 +499,26 @@ equipment.
 Article 15
 Publicly available directories
 ```
-1. The providers of number-based interpersonal communications services shall give end-users
-    who are natural persons the opportunity to determine per category of personal data whether their
+1. The providers of number-based interpersonal communications services shall inform end-users who are natural
+    persons about the possibility to include their personal data in a publicly available
+    directory and give them the opportunity to determine per category of personal data whether their
 personal data are included in the publicly available directory, to the extent that such data are relevant for the purpose of
     the directory as determined by the provider of the directory. 
-1a. The providers of number-based interpersonal communications services shall give end-
-    users who are natural persons the means to verify, correct and delete data included in a publicly available
+1a. The providers of number-based interpersonal communications services and/or
+    providers of publicly available directory shall give end-users who are natural 
+    persons the means to verify, correct and delete data included in a publicly available
 directory
-2. The providers of number-based interpersonal communications services shall inform end-users who are
-    natural persons whose personal data are in the directory of the available search
-    functions of the directory and obtain the additional consent of end-users’ before enabling such search
+2. The providers of number-based interpersonal communications services and/or
+    providers of publicly available directory shall inform end-users who are
+    natural persons whose personal data are in the directory of any search
+    function that is not based on name in the directory and obtain the additional consent of end-users’ before enabling such search
     functions related to their own data.
-3. The providers of number-based interpersonal communications services shall provide end-users that are legal
+3. The providers of number-based interpersonal communications services and/or providers of 
+    publicly available directory shall provide end-users that are legal
     persons with the possibility to object to data related to them being included in the
     directory.
-3a. The providers of number-based interpersonal communications services shall give end-users that are legal persons the means to
+3a. The providers of number-based interpersonal communications services s and/or providers of publicly 
+    available directory shall give end-users that are legal persons the means to
     verify, correct and delete data a included in a publicly available directory.
 4. The possibility for end-users not to be included in a publicly available directory, or to
     verify, correct and delete any data related to them shall be provided free of charge.
@@ -527,13 +530,22 @@ Direct marketing communications
 1. Natural or legal persons may use electronic communications services for the
     purposes of [sending or presenting] direct marketing communications to end-users who are natural
     persons that have given their consent.
-2. Where a natural or legal person obtains contact details for electronic message
+
+2. Notwithstanding paragraph 1, where a natural or legal person obtains contact details for electronic message
     from end-users who are natural persons, in the context of the sale of a product or a service, in accordance
-    with Regulation (EU) 2016/679, that natural or legal person may use these electronic
+    with Regulation (EU) 2016/679, that natural or legal person may use these 
     contact details for direct marketing of its own similar products or services only if
     such end-users are clearly and distinctly given the opportunity to object, free of charge
     and in an easy manner, to such use. The right to object shall be given at the time of
-    collection and each time such direct marketing communication is [sent or presented].
+    collection and of such end-users' contact details and, if that end-user has not 
+    initially refused that use, each time that natural or legal persons sends a message to that 
+    end-user for the purpose of direct marketing.
+
+2a. Member States may provide that natural or legal person may use its customer's
+    contact details for direct marketing purposes only where the sale of the product or
+    service occurred not more than twelve months prior to the sending of an electronic
+    message for direct marketing.
+
 3. Without prejudice to paragraphs 1 and 2, natural or legal persons using electronic
     communications services for the purposes of placing direct marketing calls shall
     present the calling line identification on which they can be contacted.
@@ -556,11 +568,26 @@ direct marketing communications [sent or presented] by means set forth under par
 sufficiently protected.
 
 6. Any natural or legal person using electronic communications services to [send or present]
-    direct marketing communications shall inform end-users of the marketing nature of
+    direct marketing communications shall, each time a direct marketing communication is [sent or presented]: 
+
+(a) reveal his or its identity and use true return addresses or numbers;
+
+(b) inform end-users of the marketing nature of
     the direct marketing communication and the identity of the legal or natural person on behalf of whom
-    the communication is [sent or presented] and shall provide the necessary information for
-    end-users who are natural persons to exercise their right to withdraw their consent, 
+    the communication is [sent or presented]
+
+(c) provide the necessary information for
+    end-users who are natural persons to exercise their right to object or to withdraw their consent, 
 	in an easy manner and free of charge, to receiving further direct marketing communications.
+
+(d) clearly and distinctly give the end-users who are natural persons a means to object or
+    to withdraw their consent, free of charge, at any time, and in an easy and effective
+    manner, to receiving further direct marketing communications. This means shall also
+    be given at the time of collection of the contact details according to paragraph 2. It
+    shall be as easy to withdraw as to give consent.
+
+6a. Advertisements on a website that are displayed to the general public and do not
+    require any contact details of end-users should not be subject to this article.
 
 ```
 Article 17
