--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -31,12 +31,11 @@ Material Scope
 ```
 1. This Regulation applies to:
 
-(a) the processing of electronic communications content data in transmission and of
+(a) the processing of electronic communications content and of
     electronic communications metadata carried out in connection with the provision and the
     use of electronic communications services;
 
-(b) information processed by or emitted by or stored in the terminal
-    equipment of end-users.
+(b) end-users' terminal equipment information.
 
 (c) the placing on the market of software permitting electronic communications,
     including the retrieval and presentation of information on the internet;
@@ -44,11 +43,11 @@ Material Scope
 (d) the offering of a publicly available directory of end-users of electonic communications
     services;
 
-(e) the sending or presenting direct marketing communications to end-users.
+(e) the sending direct marketing communications to end-users.
 
 2. This Regulation does not apply to:
 
-(a) activities which fall outside the scope of Union law;
+(a) activities concerning national security and defence;
 
 (b) activities of the Member States which fall within the scope of Chapter 2 of Title V of
     the Treaty on European Union;
@@ -78,11 +77,10 @@ Territorial scope and representative
 
 (a) the provision of electronic communications services to end-users who are in the Union
 
-(aa) the processing of electronic communications content in transmission of electronic
+(aa) the processing of electronic communications content of electronic
     communications metadata of end-users who are in the Union;
 
-(c) the protection of information processed by or emitted by or stored in the
-    terminal equipment of end-users who are in the Union.
+(c) the protection of terminal equipment information of end-users who are in the Union.
 
 (ca) the placing on the Union market of software permitting electronic communications,
     including the retrieval and presentation of information on the internet;
@@ -90,12 +88,12 @@ Territorial scope and representative
 (cb) the offering of publicly available directories of end-users of electronic
     communications services whoe are in the Union;
 
-(cc) the sending or presenting of direct marketing communications to end-users who are
+(cc) the sending of direct marketing communications to end-users who are
     in the Union.
 
 2. Where the provider of an electronic communications servicee, the provider of a publicly
     available directory or the provider of software enabling electronic communications or
-    a person using electronic communications services to send or present direct
+    a person using electronic communications services to send direct
     marketing communications or makes use of processing and storage capabilities or
     collects information processed by or emitted by or sored in the end-users’ terminal
     equipment is not established in the
@@ -161,18 +159,19 @@ Definitions
 (d) ‘publicly available directory’ means a directory of end-users of number-based
     interpersonal communications services, whether in printed or electronic form, which is published
     or made available to the public or to a section of the public, including by means of a
-    directory enquiry service and the main function of which is to enable to identify
+    directory enquiry service and the main function of which is to enable identification of
     such end-users;
 
 (e) ‘electronic message’ means any message containing information such as text,
     voice, video, sound or image sent over an electronic communications network which
     can be stored in the network or in related computing facilities, or in the terminal
-    equipment of its recipient;
+    equipment of its recipient, including e-mail, SMS, MMS and functionally equivalent applications
+    and techniques; 
 
 (f) ‘direct marketing communications’ means any form of advertising, whether written
-    or oral, sent or presented to one or more identified or identifiable end-users of electronic
-    communications services, including the use of automated calling and communication
-    systems with or without human interaction, electronic message, SMS, etc.;
+    or oral, sent to one or more identified or identifiable end-users of electronic
+    communications services, including the placing of voice-to-voice calls, the use of automated calling and communication
+    systems with or without human interaction, electronic message, etc.;
 
 (g) ‘direct marketing voice-to-voice calls’ means live calls, which do not entail the use
     of automated calling systems and communication systems;
@@ -218,9 +217,9 @@ Consent
 Article 5
 Confidentiality of electronic communications data
 ```
-1. Electronic communications data shall be confidential. Any processing of electronic
+Electronic communications data shall be confidential. Any  interference with electronic
     communications data, including listening, tapping, storing, monitoring, scanning or other
-    kinds of interception or surveillance of electronic communications data, by
+    kinds of interception, surveillance or processing of electronic communications data, by
     anyone other than the end-users concerned, shall be prohibited, except when permitted by this
     Regulation.
 
@@ -235,19 +234,21 @@ Permitted processing of electronic communications data
     necessary for that purpose; or
 
 (b) it is necessary to maintain or restore the security of electronic communications
-    networks and services, or detect technical faults and/or errors and/or attacks in the transmission of
-    electronic communications, for the duration necessary for that purpose.
+    networks and services, or detect technical faults and/or errors and/or security risks and/or
+    attacks in the transmission of electronic communications, for the duration necessary for that purpose.
 
 2. Without prejudice to paragraph 1, providers of electronic communications networks and
     services shall be permitted to process electronic communications metadata only if:
 
-(a) it is necessary for the purposes of network management or optimisation, or to meet mandatory 
-    quality of service requirements pursuant to
+(a) it is necessary for the purposes of network management or network optimisation, 
+    provided that the purpose or purposes concerned could not be fulfilled by processing
+    information that is made anonymous and for the duration necessary for that purpose,
+    or to meet mandatory quality of service requirements pursuant to
     [Directive establishing the European Electronic Communications Code] or
     Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
 
 (b) it is necessary for performance of the contract to which the end-user is party,
-    including billing, calculating interconnection payments, detecting or
+    to the extent necessary for billing, calculating interconnection payments, detecting or
     stopping fraudulent, or abusive use of, or subscription to, electronic communications
     services; or
 
@@ -257,11 +258,20 @@ Permitted processing of electronic communications data
     purposes concerned could not be fulfilled by processing information that is made
     anonymous; or
 
-(d) it is necessary to protect the vital interest of an end-user who is a natural person, or
-    that of another natural person, upon request of a competent authority, in accordance
-    with Union or Member State law; or
+(d) it is necessary to protect the vital interest of a natural person, in the case of emergency,
+    upon request of a competent authority, in accordance with Union or Member State law; or
 
-(e) it is necessary for scientific research or statistical purposes provided it is based on
+(e) it is necessary for the purpose of statistical counting, provided:
+    - that the processing is limited to electronic communications meta-data
+    that constitutes geolocation data that is pseudonymised, 
+    - the processing could not be carried out by
+    processing information that is made anonymous, and the geolocation data is erased or made
+    anonymous when it is no longer needed to fulfil the purpose, and 
+    - the geolocation data is not used to determine the nature or
+    characteristics of an end-user or to build a profile of an end-user.
+
+(f) it is necessary for statistical counting not permitted in
+    accordance with point (e) or for scientific research,  provided it is based on
     Union or Member State law which shall be proportionate to the aim pursued and
     provide for specific measures, including encryption and pseudonymisation, to
     safeguard fundamental rights and the interest of the end-users. Processing of
@@ -269,26 +279,13 @@ Permitted processing of electronic communications data
     with paragraph 6 of Article 21 and paragraphs 1, 2 and 4 of Article 89 of Regulation
     (EU) 2016/679.
 
-(f) it is necessary for the purpose of statistical counting at the request of a public
-    authority, provided that the processing is limited to electronic communications data
-    that constitutes geolocation data, such processing could not be carried out by
-    processing information that is made anonymous, such data is erased or made data
-    anonymous when it is no longer needed to fulfil the purpose and at the latest 24 hours
-    after its collection, and such data is not used to determine the nature or
-    characteristics of an end-user or to build a profile of an end-user.
-
 3. Without prejudice to paragraph 1, providers of the electronic communications networks and
     services shall be permitted to process electronic communications content only:
-
-(a) for the sole purpose of the provision of a service to an end-user, if the end-
-    user or end-users concerned have given their consent to the processing of 
-    electronic communications content and the provision of that service cannot be
-    fulfilled without the processing of such content; or
 
 (aa) for the purpose of the provision of an explicitly requested services by an end-user for
     purely individual use if the requesting end-user has given consent and where such
     requested processing does not adversely affect fundamental rights and interest of
-    another end-user concerned and does not exceed the duration necessary for the
+    another person concerned and does not exceed the duration necessary for the
     provision of the requested services and is limited to that purpose only; or
 
 (b) if all end-users concerned have given their consent to the processing of their
@@ -299,15 +296,13 @@ Permitted processing of electronic communications data
     consulted the supervisory authority. Article 36(2) and (3) of Regulation
     (EU) 2016/679 shall apply to the consultation of the supervisory authority.
 
-3a. For the purposes of point (f) of paragraph 2, the provider of the electronic
+3a. For the purposes of point (e) of paragraph 2, the provider of the electronic
     communications service shall:
 
-(a) exclude electronic communications metadata that reveal special categories of
-    personal data pursuant to Article 9 of Regulation (EU) 2016/679 from processing
-    where technically possible, and otherwise take their nature into account;
+(a) exclude electronic communications metadata that constitue geolocation data that reveal special categories of
+    personal data pursuant to Article 9 of Regulation (EU) 2016/679 from processing;
 
-(b) not share such data with the public authority or any other third party, unless it is
-    made anonymous;
+(b) not share such data with third parties, unless it is made anonymous;
 
 (c) prior to the processing carry out an assessment of the impact of the envisaged
     processing operations on the protection of electronic communications data and
@@ -331,10 +326,12 @@ Storage and erasure of electronic communications data
     the provider of the electronic communications service shall erase electronic
     communications content or make that data anonymous after receipt of electronic
     communication content by the intended recipient or recipients.
+
 2. Without prejudice to point (b) of Article 6(1) and points (a), (c) and (ce) of Article 6(2),
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
     for the purpose of the transmission of a communication.
+
 3. Where the processing of electronic communications metadata takes place for the
     purpose of billing in accordance with point (b) of Article 6(2), the relevant metadata
     may be kept until the end of the period during which a bill may lawfully be
@@ -361,6 +358,10 @@ Protection of end-users' terminal equipment information
     carried out by the provider of the information society service requested by the end-
     user or by a third party on behalf of the provider of the information society service 
     provided that conditions laid down in Article 28 of Regulation (EU) 2016/679 are met; or
+
+(da) it is necessary to maintain or restore the security of information society services,
+    prevent fraud or detect technical faults for the duration necessary for that purpose;
+    or
 
 (e) it is necessary for a security update provided that:
     (i) security updates are necessary and do not in any way change the privacy settings chosen by the
@@ -389,7 +390,7 @@ Protection of end-users' terminal equipment information
     collected, as well as any measure the end-user of the terminal equipment can take to
     stop or minimise the collection.
 
-2b. For the purpose of paragraph 2 points (b) and (c) the collection of such information shall be conditional on the application of
+2b. For the purpose of paragraph 2 points (b) and (c), the collection of such information shall be conditional on the application of
     appropriate technical and organisational measures to ensure a level of security
     appropriate to the risks, as set out in Article 32 of Regulation (EU) 2016/679, have
     been applied.
@@ -410,9 +411,11 @@ Information and options for privacy settings to be provided
     prevent any other parties than the end-user from storing information on the terminal equipment of an end-
     user or processing information already stored on that equipment.
 
-2. At the time of installation or first usage and every update, the software  referred 
+2. At the time of installation or first usage and updates that change the
+    privacy settings options, the software  referred 
     to in paragraph 1 shall inform the end-user about the privacy settings
-    options and navigate the end-user through them.
+    options and the way the end-user may use them. The software shall offer the 
+    end-user the choice to be reminded about the privacy settings options.
 
 2a. The software referred to in paragraph 1 shall provide in a clear manner easy ways
     for end-users to change the privacy setting at any
@@ -420,7 +423,10 @@ Information and options for privacy settings to be provided
 
 3. In the case of software which has already been installed on [the date of entry into application], the
     requirements under paragraphs 1 and 2 shall be complied with at the time of the first
-    update of the software, but no later than [3 month after the date of entry into applicationn].
+    update of the software.
+
+4. This provision shall not apply to software that is no longer supported at the time of
+    entry into application of this Regulation
 
 ```
 Article 11
@@ -430,9 +436,12 @@ Restrictions
     the obligations and rights provided for in Articles 5 to 8 where such a restriction
     respects the essence of the fundamental rights and freedoms and is a necessary,
     appropriate and proportionate measure in a democratic society to safeguard one or
-    more of the general public interests referred to in Article 23(1)(a) to (e) of
+    more of the general public interests referred to in Article 23(1)(c) to (e), (i) and (j) of
     Regulation (EU) 2016/679 or a monitoring, inspection or regulatory function
     connected to the exercise of official authority for such interests.
+
+1a. Article 23(2) of Regulation (EU) 2016/679 shall apply to any legislative measures
+    referred to in paragraph 1.
 
 2. Providers of electronic communications services shall establish internal procedures
     for responding to requests for access to end-users’ electronic communications data
@@ -496,7 +505,7 @@ of incoming calls and to provide access to emeregency services
     public safety answering points, for the purpose of responding to such
     communications.
 
-1a. Regardless whether the called end-user rejects incoming calls where the presentation
+1a. Notwithstanding Article 8(1),regardless whether the called end-user rejects incoming calls where the presentation
     of the calling line identification has been prevented by the calling end-user, providers
     of number-based interpersonal communications services shall override this choice,
     where technically possible, when the calling end-user is an organisation dealing with
@@ -505,7 +514,7 @@ of incoming calls and to provide access to emeregency services
 
 2. Member States shall establish more specific provisions with regard to the
     establishment of procedures and the circumstances where providers of
-	number-based interpersonal communication services shall override the
+	number-based interpersonal communication services shall override, or otherwise address, the
     elimination of the presentation of the calling line identification on a temporary basis,
     where end-users request the tracing of unwanted, malicious or nuisance calls.
 
@@ -549,10 +558,6 @@ Publicly available directories
     directory can take place provided that he end-user who is a natural person shall have
     the right to object to such inclusion.
 
-1a. The providers of number-based interpersonal communications services 
-    shall give end-users who are natural persons the means to verify, correct
-    and delete data included in a publicly available directory.
-
 2. The providers of number-based interpersonal communications services shall inform end-users who are
     natural persons whose personal data are in the directory of any search
     function that is not based on name in the directory and obtain the additional 
@@ -563,7 +568,7 @@ Publicly available directories
     directory.
 
 3a. The providers of number-based interpersonal communications services shall give 
-    end-users that are legal persons the means to verify, correct and delete data a
+    end-users the means to verify, correct and delete data a
     included in a publicly available directory.
 
 3aa. Notwithstanding paragraphs 1aa to 3a, Member States may provide by law that the
@@ -574,12 +579,19 @@ Publicly available directories
 4. The possibility for end-users not to be included in a publicly available directory, or to
     verify, correct and delete any data related to them shall be provided free of charge.
 
+4a. Where the personal data of the end-users of number based interpersonal
+    communications services have been included in a publicly available directory before
+    this Regulation enters into force, the personal data of such end-users may remain
+    included in a publicly available directory, including version with search functions,
+    unless the end-users have expressed their objection against their data being included
+    in the directory or against the use of available search functions related to their data.
+
 ```
 Article 16
 Unsolicited and direct marketing communications
 ```
 1. Natural or legal persons y shall be prohibited from using electronic communications services for the
-    purposes of [sending or presenting] direct marketing communications to end-users who are natural
+    purposes of sending direct marketing communications to end-users who are natural
     persons unless they have given their consent.
 
 2. Notwithstanding paragraph 1, where a natural or legal person obtains contact details for electronic message
@@ -618,7 +630,7 @@ Unsolicited and direct marketing communications
     direct marketing communications sent by means set forth under paragraph 1 are
     sufficiently protected.
 
-6. Any natural or legal person using electronic communications services to [send or present]
+6. Any natural or legal person using electronic communications services to send
     direct marketing communications shall, each time a direct marketing communication is sent: 
 
 (a) reveal his or its identity and use effective return addresses or numbers;
@@ -629,23 +641,10 @@ Unsolicited and direct marketing communications
 
 (d) clearly and distinctly give the end-users who are natural persons a means to object or
     to withdraw their consent, free of charge, at any time, and in an easy and effective
-    manner and free of charge, to receiving further direct marketing communications, and 
+    manner, to receiving further direct marketing communications, and 
     shall provide the necessary information to this end. This means shall also
     be given at the time of collection of the contact details according to paragraph 2. It
     shall be as easy to withdraw as to give consent.
-
-```
-Article 17
-Information about detected security risks
-```
-In the case of a particular risk that may compromise the security of networks and electronic
-
-communications services, the provider of an electronic communications service shall inform
-
-end-users concerning such risk and, where the risk lies outside the scope of the measures to be
-
-taken by the service provider, inform end-users of any possible remedies, including an
-indication of the likely costs involved.
 
 ## CHAPTER IV
 
@@ -658,19 +657,27 @@ Article 18
 Independent supervisory authorities
 ```
 0. Each Member State shall provide for one or more independent public authorities to
-   be responsible for monitoring the application of this Regulation (‘supervisory
-   authorities’), in accordance with paragraphs 1 and 1a of this Article.
+    be responsible for monitoring the application of this Regulation (‘supervisory
+    authorities’), in accordance with paragraphs 1 to 1as of this Article.
+
 1. The independent supervisory authority or authorities responsible for monitoring the
     application of Regulation (EU) 2016/679 shall also be responsible for monitoring the
     application of Chapter II of this Regulation. Without prejudice to article 19, Chapter VI and VII of Regulation (EU) 2016/679
     shall apply _mutatis mutandis_. The tasks and powers of the supervisory authorities
     shall be exercised with regard to end-users.
+
 1a. Member Sates shall entrust the monitoring of the application of Chapter III of this
     Regulation to the supervisory authorities referred to in paragraph 1 of this Article or
     to other supervisory authorities having an equivalent level of independence.
+
+1aa. The supervisory authorities referred to in paragraphs 1 and 1a shall have the power
+    to provide remedies pursuant to article 21(1) and to impose administrative fines
+    pursuant to article 23.
+
 1b. Where more than one supervisory authority is responsible for monitoring the
     application of this Regulation in a Member State, such authorities shall cooperate
     with each other. 
+
 2. The supervisory authorities referred to in paragraphs 1 and 1a shall cooperate
     whenever appropriate with national regulatory authorities established pursuant to the
     [Directive Establishing the European Electronic Communications Code].
@@ -699,6 +706,14 @@ European Data Protection Board
     this paragraph for establishing common procedures for reporting by end-users of
     infringements of this Regulation regarding rules laid down in paragraph 2 of Article
     54 of Regulation (EU) 2016/679;
+
+(da) issue guidelines, recommendations and best practices in accordance with point (b) of
+    this paragraph to assess for different types of electronic communications services the
+    moment in time of receipt of electronic communictions content;
+
+(db) issue guidelines, recommendations and best practices in accordance with point (b) of
+    this paragraph on the provision of consent in the context of Article 6 and 8 of this
+    Regulation by end-users wjp are legal persons and in an employment relationship;
 
 (e) [provide the Commission with an opinion on the icons referred to in paragraph 3 of
     Article 8];
@@ -931,7 +946,8 @@ Entry into force and application
 1. This Regulation shall enter into force on the twentieth day following that of its
     publication in the _Official Journal of the European Union_.
 
-2. It shall apply from [25 May 2018].
+2. It shall apply from [one year from the date of entry into force of this
+    Regulation].
 
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
